--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "david-crowley.com",
-  "version": "1.2.3-6",
+  "version": "1.2.3-8",
   "private": "true",
   "dependencies": {
     "express": "3.0.0alpha4",
@@ -15,5 +15,8 @@
   },
   "engines": {
     "node": "0.8.x"
-  }
+  },
+  "domains": [
+    "david-crowley.com"
+  ]
 }
