--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "david-crowley.com",
-  "version": "1.2.3-16",
+  "version": "1.2.3-19",
   "private": "true",
   "dependencies": {
     "express": "3.0.0alpha4",
@@ -16,5 +16,8 @@
   },
   "domains": [
     "david-crowley.com"
-  ]
+  ],
+  "scripts": {
+    "start": "node server.js"
+  }
 }
