--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "david-crowley.com",
-  "version": "1.2.3-24",
+  "version": "1.2.3-39",
   "private": "true",
   "dependencies": {
     "express": "3.0.0alpha4",
     "jade": "*",
+    "poet": "*",
     "stylus": "*",
     "tumblrwks": "*",
     "nib": "*"
